# bouncer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  Makefile  README.md  ROADMAP.md  SYSTEM.md  pyproject.toml
.github/workflows/: release-extension.yml
.intent/phases/001-core-lease-contract/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/002-first-rust-binding/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/003-sql-surface-decision/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/004-transactional-sql-mutators/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/005-borrowed-transaction-contract/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/006-rust-transaction-handle/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/007-core-hardening/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/008-core-crate-rename/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/009-python-binding/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/010-python-binding-hardening/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/011-deterministic-invariant-runner/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/012-sqlite-behavior-matrix/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/013-schema-and-data-integrity-hardening/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/014-docs-as-safety-rails/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
.intent/phases/015-user-journey-acceptance/: commits.txt  plan.md  reviews_and_decisions.md  spec-diff.md
bouncer-core/: Cargo.toml
bouncer-core/src/: lib.rs
bouncer-core/tests/: integrity.rs  invariants.rs  pragma_matrix.rs  sqlite_matrix.rs
bouncer-extension/: Cargo.toml  README.md
bouncer-extension/examples/: basic_claim.py  basic_claim.sql  transactional_claim.py  transactional_claim.sql
bouncer-extension/src/: lib.rs
bouncer-honker/: Cargo.toml
bouncer-honker/src/: lib.rs
litelease-core/: Cargo.toml
litelease-core/src/: lib.rs
litelease-core/tests/: integrity.rs  invariants.rs  pragma_matrix.rs  sqlite_matrix.rs
litelease-extension/: Cargo.toml  README.md
litelease-extension/examples/: basic_claim.py  basic_claim.sql  transactional_claim.py  transactional_claim.sql
litelease-extension/src/: lib.rs
scripts/: stage_extension_dist.sh  write_sha256.sh
