[package]
name = "bouncer-core"
version = "0.1.0"
edition = "2021"
description = "Rust core for Litelease, a SQLite lease and coordination library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/russellromney/litelease"
homepage = "https://github.com/russellromney/litelease"
documentation = "https://docs.rs/bouncer-core"

[dependencies]
rusqlite = { version = "0.39.0", features = ["functions"] }
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3"
