[package]
name = "bouncer-extension"
version = "0.1.0"
edition = "2021"
description = "SQLite loadable extension for Litelease. Adds bouncer_* lease functions to any SQLite client."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/russellromney/litelease"
homepage = "https://github.com/russellromney/litelease"
documentation = "https://docs.rs/bouncer-extension"
keywords = ["sqlite", "lease", "lock", "coordination", "litelease"]
categories = ["database", "concurrency"]

[lib]
name = "bouncer_ext"
crate-type = ["cdylib"]

[dependencies]
bouncer-core = { path = "../bouncer-core", version = "0.1.0" }
rusqlite = { version = "0.39.0", features = ["loadable_extension"] }
