[package]
name = "bouncer-honker"
version = "0.1.0"
edition = "2021"
description = "Rust core for Bouncer, a lease and coordination library on top of Honker."
license = "MIT"

[dependencies]
rusqlite = { version = "0.39.0", features = ["functions"] }
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3"
